[package]
name = "hw1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.7.2"
# Common
# itertools = "0.10.3" # danielkeep.github.io/itercheat_baked.html
# cfg-if = "1.0.0" # branching compilation logic
# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1.0" }
rand = { version = "0.8" }

# Error Handling
anyhow   ="1.0"

# [dev-dependencies]
# name = "bench"
# harness = false
